--- a/d3/index.html
+++ b/d3/index.html
@@ -56,7 +56,7 @@ var getAllLinks = function(triples) {
 
 function shortenString(str) {
   if (str.length > 8) {
-    return str.slice(0, 5) + "…";
+    return str.slice(0, 5) + "..";
   } else {
     return str
   }
