--- a/d3/index.html
+++ b/d3/index.html
@@ -8,6 +8,7 @@
 .node circle {
   stroke: #fff;
   stroke-width: 1.5px;
+  cursor: pointer;
   
   -webkit-filter: blur(5px);
   -moz-filter: blur(5px);
@@ -26,6 +27,7 @@
 
 .node text {
   fill: #fff;
+  pointer-events: none;
 }
 
 .link {
