--- a/d3/index.html
+++ b/d3/index.html
@@ -1,73 +1,12 @@
 <!DOCTYPE html>
 <title>COMAC Navigator — d3 experiments</title>
 <meta charset="utf-8">
-<style>
-
-@import url("styles.css");
-
-.node circle {
-  stroke: #fff;
-  stroke-width: 1.5px;
-  cursor: pointer;
-}
-
-g.paper circle {
-  fill: #292;
-}
-
-g.paper.hover circle {
-  fill: #fff;
-}
-g.paper.hover circle {
-  stroke: #292;
-  stroke-width: 1.5px;
-}
-g.paper.hover text {
-  fill: #292;
-}
-
-g.author circle {
-  fill: #1F77B4;
-}
-g.author.hover circle {
-  fill: #fff;
-}
-g.author.hover circle {
-  stroke: #1F77B4;
-  stroke-width: 1.5px;
-}
-g.author.hover text {
-  fill: #1F77B4;
-}
-
-.node text {
-  fill: #fff;
-  pointer-events: none;
-}
-
-.link {
-  stroke: #888;
-  stroke-width: 1.5px;
-}
-.link.hover {
-  stroke: #444;
-  stroke-width: 1.5px;
-}
-
-.similarity {
-  stroke-dasharray: 7,7;
-}
-.citation {
-}
-.isAuthor {
-}
-
-</style>
+<link rel="stylesheet" type="text/css" href="styles.css" />
 <body>
   
 <h1>COMAC Navigator</h1>
 
-<svg class="navigator-canvas"></svg>
+<svg class="graphView"></svg>
 
 
 <div style="float: left; width: 400px; margin-left: 60px">
@@ -114,175 +53,5 @@ TODO
 <br style="clear: both" />
 
 
-<script src="d3.js"></script>
-<script>
+<script data-main="scripts/main" src="scripts/lib/require.js"></script>
 
-function shortenString(str) {
-  if (str.length > 8) {
-    return str.slice(0, 5) + "..";
-  } else {
-    return str
-  }
-}
-
-function nodeIdsToReferences(nodes, links) {
-  return links.map(function(link) {
-    link.source = nodes.filter(function(node) {
-      return node.id === link.sourceId;
-    })[0];
-    link.target = nodes.filter(function(node) {
-      return node.id === link.targetId;
-    })[0];
-    link.hover = false;
-    return link;
-  })
-}
-
-
-
-var width = 960,
-    height = 500;
-
-var force = d3.layout.force()
-    .charge(-800)
-    //.charge(function(node) {
-    //  if (node.favourite)
-    //    return -500;
-    //  else
-    //    return -1600;
-    //})
-    .linkDistance(100)
-    //.linkDistance(function(link) {
-    //  if (link.favourite)
-    //    return 100;
-    //  else
-    //    return 150;
-    //})
-    .size([width, height]);
-
-var svg = d3.select("body").selectAll(".navigator-canvas")
-    .attr("width", width)
-    .attr("height", height);
-
-var computedGraph =
-  { nodes   : null
-  , links   : null
-  , paths   : svg.selectAll(".link")
-  , circles : svg.selectAll(".node")
-  }
-
-d3.json("data.json", function(error, graph) {
-  console.log(JSON.stringify(graph))
-
-  computedGraph.nodes = graph.nodes;
-  computedGraph.links = nodeIdsToReferences(computedGraph.nodes, graph.links);
-
-  //console.log(computedGraph.links[0]);
-  //console.log(JSON.stringify(computedGraph.nodes));
-  //console.log(JSON.stringify(computedGraph.links));
-
-  force
-    .nodes(computedGraph.nodes)
-    .links(computedGraph.links)
-    .on("tick", function() {
-      computedGraph.paths
-        .attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
-
-      computedGraph.circles
-        .attr("transform", function(d, i) {
-            return "translate(" + [ d.x,d.y ] + ")"
-        });
-    });
-
-  restart();
-
-  force.start();
-
-  showNodesFirefoxHack();
-
-  computedGraph.nodes.map( function(d) { d.favourite = false; return d; });
-
-  setTimeout(restart, 1000);
-});
-
-function showNodesFirefoxHack() {
-  n = d3.selectAll(".node")
-  n.classed("node", false)
-  setTimeout(function(){n.classed("node", true)}, 0);
-}
-
-function restart() {
-  // paths (links)
-  computedGraph.paths = computedGraph.paths
-    .data(computedGraph.links)
-
-  // add new links
-  computedGraph.paths
-    .enter().append("line")
-      .attr("class", function( d) {
-            return "link " + d.type;
-        })
-      .classed("hover", function(d) { return d.hover });
-      //.style("stroke-width", function(d) { return Math.sqrt(d.value); });
-
-  // update existing & new links
-  computedGraph.paths
-      .style("opacity", function(d) { if (d.favourite) return 1.0; else return 0.3})
-
-  // remove old links
-  computedGraph.paths.exit().remove();
-
-
-  // circles (nodes)
-  computedGraph.circles = computedGraph.circles
-    .data(computedGraph.nodes, function(d) { return d.id; })
-
-  // add new nodes
-  var g = computedGraph.circles
-    .enter().append("g");
-
-  g
-      .attr({
-        "transform" : function( d) {
-            return "translate("+ [d.x,d.y] + ")";
-        },
-        "class"     : function( d) {
-            return "node " + d.type;
-        }
-      })
-      .call(force.drag);
-
-  g.append("circle")
-      .attr("r", 30)
-      .on("mouseover", function() {
-          d3.select(this.parentNode).classed("hover", true);
-          restart();
-      })
-      .on("mouseout", function() { 
-          d3.select(this.parentNode).classed("hover", false);
-          restart();
-      })
-    .append("title")
-      .text(function(d) { return d.name; });
-
-  g.append("text")
-      .attr({
-          'text-anchor'   : 'middle',
-          y               : 4
-      })
-      .text(function(d) {
-          return shortenString(d.name);
-      });
-
-  // update existing & new nodes
-  computedGraph.circles
-    .style("opacity", function(d) { if (d.favourite) return 1.0; else return 0.5})
-
-  // remove old nodes
-  computedGraph.circles.exit().remove();
-}
-
-</script>
