Added 'dataset' and 'journal' node types

--- a/d3/index.html
+++ b/d3/index.html
@@ -19,17 +19,30 @@ Author node
 &nbsp;
 &nbsp;
 &nbsp;
+&nbsp;
 <svg width=64 height=64>
   <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P</text></g>
 </svg>
 Paper node
+</p>
+<p class="legend">
+<svg width=64 height=64>
+  <g transform="translate(32, 32)" class="node dataset"><circle r="30"></circle><text text-anchor="middle" y="4">D<text></g>
+</svg>
+Dataset node
+&nbsp;
+&nbsp;
+&nbsp;
+<svg width=64 height=64>
+  <g transform="translate(32, 32)" class="node journal"><circle r="30"></circle><text text-anchor="middle" y="4">J</text></g>
+</svg>
+Journal node
 </p>
 </div>
 
 <div style="float: right; width: 430px;">
 <h2>Opacity</h2>
 <p class="legend"> 
-
 <svg width=64 height=64>
   <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P<text></g>
 </svg>
@@ -44,12 +57,6 @@ Reduced opacity — suggested node
 </div>
 
 
-<div style="float: left; width: 400px; margin-left: 60px">
-<h2>Relations</h2>
-<p class="legend">
-TODO
-</p>
-</div>
 <br style="clear: both" />
 
 
