--- a/d3/index.html
+++ b/d3/index.html
@@ -3,62 +3,85 @@
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="styles.css" />
 <body>
-  
-<h1>COMAC Navigator</h1>
 
-<svg class="graphView"></svg>
+    <div id="search-sidebar" class="left col">
+        <div id="search-form">
+            <button id="search-button" name="search" value="Search" >Search</button>
+            <div id="search-input-wrap">
+                <input  id="search-input" type="text" name="term"  />
+            </div>
+        </div>
+        <!--        
+                    <input id="search-input" value="search" size="10">
+                    <button id="search-button" type="button">Search</button>
+                </div>-->
+        <div id="searchResults">
+
+        </div>
+    </div>
+    <div class="right col">
+        <div class="header row">
+            <h1>COMAC Navigator</h1>
+        </div>
+        <div class="body row scroll-y">
+            <!--<div class="body row">-->
+
+            <svg class="workspace graphView"></svg>
+        </div>
+
+        <div class="footer row">
+
+            <div>
+                <h2>Nodes</h2>
+                <p class="legend">
+                    <svg width=64 height=64>
+                    <g transform="translate(32, 32)" class="node author"><circle r="30"></circle><text text-anchor="middle" y="4">A<text></g>
+                    </svg>
+                    Author node
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    <svg width=64 height=64>
+                    <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P</text></g>
+                    </svg>
+                    Paper node
+                </p>
+                <p class="legend">
+                    <svg width=64 height=64>
+                    <g transform="translate(32, 32)" class="node dataset"><circle r="30"></circle><text text-anchor="middle" y="4">D<text></g>
+                    </svg>
+                    Dataset node
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    <svg width=64 height=64>
+                    <g transform="translate(32, 32)" class="node journal"><circle r="30"></circle><text text-anchor="middle" y="4">J</text></g>
+                    </svg>
+                    Journal node
+                </p>
+            </div>
+
+            <div style="float: right; width: 430px;">
+                <h2>Opacity</h2>
+                <p class="legend"> 
+                    <svg width=64 height=64>
+                    <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P<text></g>
+                    </svg>
+                    Full opacity — favourite (selected) node
+                </p>
+                <p class="legend"> 
+                    <svg width=64 height=64>
+                    <g transform="translate(32, 32)" class="node paper" style="opacity: 0.5"><circle r="30"></circle><text text-anchor="middle" y="4">P</g>
+                    </svg>
+                    Reduced opacity — suggested node
+                </p>
+            </div>
+
+        </div>
+    </div>
 
 
-<div style="float: left; width: 400px; margin-left: 60px">
-<h2>Nodes</h2>
-<p class="legend">
-<svg width=64 height=64>
-  <g transform="translate(32, 32)" class="node author"><circle r="30"></circle><text text-anchor="middle" y="4">A<text></g>
-</svg>
-Author node
-&nbsp;
-&nbsp;
-&nbsp;
-&nbsp;
-<svg width=64 height=64>
-  <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P</text></g>
-</svg>
-Paper node
-</p>
-<p class="legend">
-<svg width=64 height=64>
-  <g transform="translate(32, 32)" class="node dataset"><circle r="30"></circle><text text-anchor="middle" y="4">D<text></g>
-</svg>
-Dataset node
-&nbsp;
-&nbsp;
-&nbsp;
-<svg width=64 height=64>
-  <g transform="translate(32, 32)" class="node journal"><circle r="30"></circle><text text-anchor="middle" y="4">J</text></g>
-</svg>
-Journal node
-</p>
-</div>
+    <script data-main="scripts/main" src="scripts/lib/require.js"></script>
 
-<div style="float: right; width: 430px;">
-<h2>Opacity</h2>
-<p class="legend"> 
-<svg width=64 height=64>
-  <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P<text></g>
-</svg>
-Full opacity — favourite (selected) node
-</p>
-<p class="legend"> 
-<svg width=64 height=64>
-  <g transform="translate(32, 32)" class="node paper" style="opacity: 0.5"><circle r="30"></circle><text text-anchor="middle" y="4">P</g>
-</svg>
-Reduced opacity — suggested node
-</p>
-</div>
-
-
-<br style="clear: both" />
-
-
-<script data-main="scripts/main" src="scripts/lib/require.js"></script>
-
+</body>
