--- a/d3/index.html
+++ b/d3/index.html
@@ -15,8 +15,11 @@
                     <input id="search-input" value="search" size="10">
                     <button id="search-button" type="button">Search</button>
                 </div>-->
-        <div id="searchResults">
+        <div id="search-results">
 
+        </div>
+        <div id="search-follow">
+            
         </div>
     </div>
     <div class="right col">
