--- a/CoMacVisSketchbook/public_html/index.html
+++ b/CoMacVisSketchbook/public_html/index.html
@@ -13,23 +13,24 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script src="js/d3/d3.v3.js" charset="utf-8"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.js"><\/script>')</script>
+        <script src="js/jqueryui/jquery-ui.js" charset="utf-8"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.js"><\/script>')</script>
 
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
         <div id="search-sidebar" class="left col">
             <div id="search-form">
-            <input id="searchInput" value="search" size="10"><button type="button" onclick="doSearch()">Search</button>
+                <input id="searchInput" value="search" size="10"><button type="button">Search</button>
             </div>
             <div id="searchResults">
 
@@ -53,6 +54,12 @@
         </div>
 
         <script>
+            console.log("Loading button...");
+            $("button").button().click(function (event) {
+                event.preventDefault();
+                console.log("Button pressed");
+                doSearch();
+            });
 
             var articles = [];
             for (var i = 0; i < 10; i++) {
