Removed legend, added link to switch interface language.

--- a/d3/index.html
+++ b/d3/index.html
@@ -33,93 +33,9 @@
         </div>
 
         <div class="footer row">
-            <div id="legend">
-                <ul>
-                    <li>Node types:
-                        <ul>
-                            <li><svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node author"><circle r="30"></circle><text text-anchor="middle" y="4">A</text></g>
-                                </svg>
-                                Author node</li>
-                            <li><svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P</text></g>
-                                </svg>
-                                Paper node</li>
-                        </ul>
-                    </li>
-                    <li>&nbsp;
-                        <ul>
-                            <li><svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node dataset"><circle r="30"></circle><text text-anchor="middle" y="4">D</text></g>
-                                </svg>
-                                Dataset node</li>
-                            <li><svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node journal"><circle r="30"></circle><text text-anchor="middle" y="4">J</text></g>
-                                </svg>
-                                Journal node</li>
-                        </ul>
-                    </li>
-                    <li>Opacity
-                        <ul>
-                            <li><svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P</text></g>
-                                </svg>
-                                Full opacity — favourite (selected) node
-                            </li>
-                            <li><svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node paper" style="opacity: 0.5"><circle r="30"></circle><text text-anchor="middle" y="4">P</text></g>
-                                </svg>
-                                Reduced opacity — suggested node</li>
-                        </ul>
-                    </li>
-                </ul>
+            <div id="languageChooser">
+                <a href="?lang=pl">Interfejs w języku polskim</a>
             </div>
-
-            <!--            
-                        
-                        <div style="float: left; width: 430px;">
-                            <h2>Nodes</h2>
-                            <p class="legend">
-                                <svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node author"><circle r="30"></circle><text text-anchor="middle" y="4">A<text></g>
-                                </svg>
-                                Author node
-                                <svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P</text></g>
-                                </svg>
-                                Paper node
-                            </p>
-                            <p class="legend">
-                                <svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node dataset"><circle r="30"></circle><text text-anchor="middle" y="4">D<text></g>
-                                </svg>
-                                Dataset node
-                                &nbsp;
-                                &nbsp;
-                                &nbsp;
-                                <svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node journal"><circle r="30"></circle><text text-anchor="middle" y="4">J</text></g>
-                                </svg>
-                                Journal node
-                            </p>
-                        </div>
-            
-                        <div style="float: right; width: 430px;">
-                            <h2>Opacity</h2>
-                            <p class="legend"> 
-                                <svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node paper"><circle r="30"></circle><text text-anchor="middle" y="4">P<text></g>
-                                </svg>
-                                Full opacity — favourite (selected) node
-                            </p>
-                            <p class="legend"> 
-                                <svg width=64 height=64>
-                                <g transform="translate(32, 32)" class="node paper" style="opacity: 0.5"><circle r="30"></circle><text text-anchor="middle" y="4">P</g>
-                                </svg>
-                                Reduced opacity — suggested node
-                            </p>
-                        </div>-->
-
         </div>
     </div>
 
