--- a/d3/index.html
+++ b/d3/index.html
@@ -15,6 +15,9 @@
                     <input id="search-input" value="search" size="10">
                     <button id="search-button" type="button">Search</button>
                 </div>-->
+        <div id="search-help">
+
+        </div>
         <div id="search-results">
 
         </div>
