--- a/d3/index.html
+++ b/d3/index.html
@@ -36,8 +36,7 @@
         </div>
 
         <div class="footer row">
-            <div id="languageChooser">
-                <a href="?lang=pl">Interfejs w języku polskim</a>
+            <div id="languageSelector">
             </div>
         </div>
     </div>
