Translations using jQuery instead of query string.

--- a/d3/index.html
+++ b/d3/index.html
@@ -6,9 +6,9 @@
 
     <div id="search-sidebar" class="left col">
         <div id="search-form">
-            <button id="search-button" name="search" value="Search" >Search</button>
+            <button id="search-button" name="search" value="Search" data-i18n="search"></button>
             <div id="search-input-wrap">
-                <input  id="search-input" type="text" name="term"  />
+                <input id="search-input" type="text" name="term"  />
             </div>
         </div>
         <!--        
@@ -32,11 +32,12 @@
         <div class="body row">
             <!--<div class="body row">-->
 
-            <svg id="mainGraph"  class="workspace graphView"></svg>
+            <svg id="mainGraph" class="workspace graphView"></svg>
         </div>
 
         <div class="footer row">
             <div id="languageSelector">
+                <button data-i18n='languageSelector'></button>
             </div>
         </div>
     </div>
